@@ -34,15 +34,14 @@
 			<label index="hooks.linkhandler">Linkhandler Links:</label>
 			<label index="list.header">Listing of broken links</label>
 			<label index="list.tableHead.path">Path</label>
-			<label index="list.tableHead.type">Type</label>
-			<label index="list.tableHead.headline">Headline</label>
-			<label index="list.tableHead.field">Field</label>
+			<label index="list.tableHead.element">Element</label>
 			<label index="list.tableHead.headlink">Link</label>
 			<label index="list.tableHead.linktarget">URL / Link Target</label>
 			<label index="list.tableHead.linkmessage">Error message</label>
 			<label index="list.tableHead.lastCheck">Last check</label>
 			<label index="list.edit">Edit element containing this broken link</label>
-			<label index="list.no.headline">(none)</label>
+			<label index="list.field">(Field: %s)</label>
+			<label index="list.no.headline">&lt;i&gt;(no headline)&lt;/i&gt;</label>
 			<label index="list.report.pagedeleted">Page '###title###' (###uid###) is deleted.</label>
 			<label index="list.report.pagenotexisting">Page (###uid###) does not exist.</label>
 			<label index="list.report.pagenotvisible">Page '###title###' (###uid###) is not visible.</label>
