@@ -38,9 +38,7 @@
 		<tr class="t3-row-header">
 			<td></td>
 			<td>###TABLEHEAD_PATH###</td>
-			<td>###TABLEHEAD_TYPE###</td>
-			<td>###TABLEHEAD_HEADLINE###</td>
-			<td>###TABLEHEAD_FIELD###</td>
+			<td>###TABLEHEAD_ELEMENT###</td>
 			<td>###TABLEHEAD_HEADLINK###</td>
 			<td>###TABLEHEAD_LINKTARGET###</td>
 			<td>###TABLEHEAD_LINKMESSAGE###</td>
@@ -50,9 +48,7 @@
 		<tr class="db_list_normal">
 			<td>###ACTIONLINK###</td>
 			<td>###PATH###</td>
-			<td>###TYPE###</td>
-			<td>###HEADLINE###</td>
-			<td>###FIELD###</td>
+			<td>###ELEMENT###</td>
 			<td>###HEADLINK###</td>
 			<td><a href="###LINKTARGET###" target="_blank">###LINKTARGET###</a></td>
 			<td>###LINKMESSAGE###</td>
